Add UUID to Visited UI class to use instead of the title as the key in Lazy Column